--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.1",
     "vue": "^2.6.11",
+    "vue-material-design-icons": "^4.11.0",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
