--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^8.2.1",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^4.11.0",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
