--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.1",
     "vue": "^2.6.11",
     "vue-material-design-icons": "^4.11.0",
+    "vue-mq": "^1.0.1",
     "vue-router": "^3.4.9",
     "vue-spinner": "^1.0.4"
   },
